# automan

./: .gitmodules  CHANGES.md  LICENSE  NOTE-Translator.md  README.md  TODO.md  automan.opam  ballast.opam  cnt_lines.sh  dune-project  run.sh  tla.sh  tla_to_dafny_demo.sh
artifact/: .gitignore  Figure11-AutoManKV-I0.sh  Figure11-AutoManKV-I1.sh  Figure11-IronKV.sh  Figure12-PaxosKV-I0.sh  Figure12-PaxosKV-I1.sh  Figure12-RaftKV.sh  Figure8-AutoManPBFT-I0.sh  Figure8-AutoManPBFT-I1.sh  Figure8-AutoManRSL-I0.sh  Figure8-AutoManRSL-I1.sh  Figure8-IronRSL.sh  Figure9-AutoManRSL-I0.sh  Figure9-AutoManRSL-I1.sh  Figure9-IronRSL.sh  README.md  cnt_lines.sh  config.json  cpu.prof  draw.sh  draw_fig_11.py  draw_fig_12.py  draw_fig_8.py  draw_fig_9.py  env.sh  keys.json  log.txt  run.sh
artifact/IronKV/ironfleet/: SConstruct
artifact/IronRSL/ironfleet/: SConstruct
artifact/KV-I0/ironfleet/: SConstruct  experiment_result.txt
artifact/KV-I1/ironfleet/: SConstruct  experiment_result.txt
artifact/PBFT-I0/ironfleet/: SConstruct
artifact/PaxosKV-I0/certs/: MyKV.IronRSLKV.service.txt
artifact/PaxosKV-I0/ironfleet/: SConstruct
artifact/PaxosKV-I1/: compile.py
artifact/PaxosKV-I1/certs/: MyKV.IronRSLKV.service.txt
artifact/PaxosKV-I1/ironfleet/: .gitignore
artifact/RSL-I0/ironfleet/: SConstruct  experiment_result.txt  throughput_log.txt
artifact/RSL-I1/ironfleet/: SConstruct  throughput_log.txt
artifact/env/: .nfs0000000000e18738000002ab  .nfs0000000000e1875c00000294  .nfs0000000000e1876b0000027d  .nfs0000000000e1876d000002b0  .nfs0000000000e1878200000290  .nfs0000000000e18788000002a8  .nfs0000000000e1878f00000296  .nfs0000000000e187a8000002a1  .nfs0000000000e187b1000002a0  .nfs0000000000e187c5000002b2  .nfs0000000000e187e4000002a9  .nfs0000000000e187e8000002b5  .nfs0000000000e18817000002ae
artifact/env/dafny3.13/: Dafny.deps.json  DafnyDriver  DafnyDriver.deps.json  DafnyLanguageServer  DafnyLanguageServer.deps.json  DafnyRuntime.deps.json  DafnyServer  DafnyServer.deps.json  DafnyServer.dll.config  dafny
artifact/env/dotnet-sdk-6.0.319-linux-x64/: dotnet
artifact/pgo/raftkvs/: cpu.prof  experiment_result.txt  raftkvs.go
asset/: remapping.json
asset/annotations/: ByzRSL.automan  RSL.automan  SHT.automan  gen-rsl.sh
asset/annotations/Common/: Dafny.Distrbuted.Common.Collections.automan
asset/annotations/RSL/: Acceptor.automan  Configuration.automan  DistributedSystem.automan  Election.automan  Environment.automan  Executor.automan  Learner.automan  Proposer.automan  Replica.automan
asset/annotations/SHT/: Configuration.automan  Hosts.automan  Keys.automan  Network.automan  SingleDelivery.automan
asset/annotations/TPC/: Configuration.automan  Coordinator.automan  Host.automan  Participant.automan
asset/final/RSL/: Acceptor.i.dfy  Election.i.dfy  Replica.i.dfy  StateMachine.i.dfy
asset/final/SHT/: Host.i.dfy  Keys.i.dfy  Message.i.dfy  Network.i.dfy
asset/final/annotations/: RSL.automan  SHT.automan
asset/impl/AddExamples/: Acceptor.i.dfy
asset/impl/ByzRSL/: Acceptor.i.dfy  Broadcast.i.dfy  CheckValSafety.i.dfy  ClockReading.i.dfy  Configuration.i.dfy  Constants.i.dfy  DistributedSystem.i.dfy  Election.i.dfy  Executor.i.dfy  Learner.i.dfy  Message.i.dfy  Parameters.i.dfy  Proposer.i.dfy  Replica.i.dfy  (+2 more)
asset/tla/: paxos.dfy  tmp.backup  tmp.tla
asset/tmp/: Acceptor.i.dfy
doc/: final-translation.org  moding-rules.org  moding-rules.tex  omar-harmony-examples.md  partial-specifications-listing.org  universal-quantification-templates.md  usage.md
lib/: annotationParser.mly  annotator.ml  checker.ml  dafnyParser.mly  dataTracker.ml  dataTracker.ml.legacy  dune  functionalization.ml  harmonyChecker.ml  internal.ml  lexer.mll  logger.ml  moder.ml  multiDataTracker.ml  multiDataTracker.ml.legacy  nameRemapper.ml  nameResolution.ml  parser.mly  printer.ml  quantifierHelper.ml  refinement.ml  symbolTable.ml  syntax.ml  testCommon.ml  test_common.ml  tlaLexer.mll  tlaParser.mly  tlaSyntax.ml  tlaToDafny.ml  tlaTokens.mly  tokens.mly  translator.ml  translatorCommon.ml  translatorMetadata.ml  typeTableBuilder.ml
test/: dune  test_annotator.ml  test_automan.ml  test_common.ml  test_data_tracker.ml  test_data_tracker.ml.legacy  test_moder.ml  test_multi_data_tracker.ml  test_parser.ml  test_printer.ml  test_translator.ml  test_type_builder.ml
(+766 files in other folders)
