(library
 (name automan)
 (libraries core str core_unix async_unix yojson)
 (preprocess (pps ppx_deriving.show ppx_deriving.eq)))

(ocamllex lexer)

(menhir
 (modules tokens)
 (flags --only-tokens --unused-tokens)
 (explain false))

(menhir
 (modules tokens dafnyParser)
 (merge_into dafnyParser)
  (flags
    :standard
    --external-tokens Tokens
    --dump))

(menhir
  (modules tokens annotationParser)
  (merge_into annotationParser)
  (flags
    :standard --external-tokens Tokens --unused-tokens))
