(test
 (name test_automan)
 (modules test_automan)
 (libraries core core_unix.command_unix async_unix automan))

(test
  (name test_parser)
  (modules test_common test_parser)
  (libraries core core_unix.command_unix async_unix automan))

(test
  (name test_annotator)
  (modules test_common test_annotator)
  (libraries core core_unix.command_unix async_unix automan))

(test
  (name test_printer)
  (modules test_printer)
  (libraries core core_unix.command_unix async_unix automan))
