(test
 (name test_automan)
 (modules test_automan)
 (libraries core core_unix.command_unix async_unix automan))

(test
  (name test_parser)
  (modules test_parser)
  (libraries core core_unix.command_unix async_unix automan))

(test
  (name test_annotator)
  (modules test_annotator)
  (libraries core core_unix.command_unix async_unix automan))

(test
 (name test_moder)
 (modules test_moder)
 (libraries core core_unix.command_unix async_unix automan))

(test
 (name test_translator)
 (modules test_translator)
 (libraries core core_unix.command_unix async_unix automan))

(test
  (name test_printer)
  (modules test_printer)
  (libraries core core_unix.command_unix async_unix automan))

(test
  (name test_type_builder)
  (modules test_type_builder)
  (libraries core core_unix.command_unix async_unix automan))

; (test
;   (name test_data_tracker)
;   (modules test_data_tracker)
;   (libraries core core_unix.command_unix async_unix automan))

; (test
;   (name test_multi_data_tracker)
;   (modules test_multi_data_tracker)
;   (libraries core core_unix.command_unix async_unix automan))
